Fix error misalignment for Quick order list (#2887)
* Fix error misalignment

* Reduce top space. Address feedback.

--- a/assets/quick-order-list.css
+++ b/assets/quick-order-list.css
@@ -529,6 +529,10 @@ quick-order-list-remove-button:hover .icon-remove {
     vertical-align: middle;
   }
 
+  .quick-order-list__table .desktop-row-error td {
+    padding-top: 0;
+  }
+
   .quick-order-list__table .variant-item--unit-price td {
     vertical-align: top;
 
